--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -14,20 +14,35 @@
   
   .default {
     background-color: $secondary-color;
+    &:hover {
+      background-color: lighten($color: $secondary-color, $amount: 15%);
+    }
   }
   
   .error {
     background-color: #e4757a;
+    &:hover {
+      background-color: lighten($color: #e4757a, $amount: 15%);
+    }
   }
   
   .info {
     background-color: #927bc1;
+    &:hover {
+      background-color: lighten($color:#927bc1, $amount: 15%);
+    }
   }
   
   .success {
     background-color: #63cc82;
+    &:hover {
+      background-color: lighten($color: #63cc82, $amount: 15%);
+    }
   }
   
   .warning {
     background-color: #fd7856;
+    &:hover {
+      background-color: lighten($color: #fd7856, $amount: 15%);
+    }
   }
